# doc-aggregator

./: .gitignore  README.md  environment.yml  pyproject.toml  pytest.ini
.github/workflows/: test-suite.yml
scripts/: install_tessdata.sh
src/doc_aggregator/: __init__.py  __main__.py  config.py  controller.py
src/doc_aggregator/ingestion/: __init__.py  docx_reader.py  image_reader.py  pdf_reader.py  txt_reader.py
src/doc_aggregator/ocr/: __init__.py  advanced_stubs.py  preprocessor.py  tesseract_ocr.py
src/doc_aggregator/structuring/: __init__.py  composer.py  pdf_composer.py  sanitizer.py  segment.py  toc.py
src/doc_aggregator/utils/: __init__.py  files.py  language.py  logging.py  manifest.py
tests/: conftest.py  pytest.ini
tests/e2e/: test_nightly_corpus_loader.py
tests/fixtures/: README.md  generate_corpus.py  nightly_loader.py
tests/fixtures/edge/corrupted/: broken.docx
tests/fixtures/edge/oversized/: README.txt
tests/fixtures/small/docx/: README.txt
tests/fixtures/small/images/: README.txt
tests/fixtures/small/pdf/: README.txt
tests/fixtures/small/txt/: ascii_sample.txt  utf8_sample.txt
tests/integration/: test_controller_errors.py  test_image_ingestion.py  test_pdf_ingestion.py  test_pdf_merge.py  test_resume_flow.py  test_txt_ingestion.py
tests/unit/: test_atomic_write.py  test_cli_args.py  test_pdf_composer.py  test_sanitizer.py  test_scanner.py
