[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doc-aggregator"
version = "0.1.0"
description = "Multi-format document aggregator with OCR fallback."
requires-python = ">=3.11"
dependencies = [
  "setuptools>=68",
  "pytesseract",
  "python-docx",
  "docxcompose",
  "PyMuPDF",
  "chardet",
  "langdetect",
  "opencv-python",
]

[project.scripts]
doc-aggregator = "doc_aggregator.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
